# gkit_test

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  concanfile.txt
.github/workflows/: cmake.yml
src/gKit/: framebuffer.cpp  gamepads.h  image_io.cpp  mat.cpp  mat.h  window.h
tutos/: tuto7_camera.cpp
